# pybottrader

./: .gitignore  CHANGES.txt  Makefile  README.md  TODO.txt  generator.py  pybottrader.html  pylintrc  pyproject.toml  search.js
.github/workflows/: build_test.yml  docs.yml
data/: IBM.csv
docs/: .buildinfo  Makefile  datastreamers.md  genindex.html  index.html  indicators-list.md  indicators.html  indicators.md  introduction.md  main.md  pybottrader.html  scanners.md  search.html  search.js  searchindex.js
docs/.doctrees/: environment.pickle  index.doctree  indicators.doctree
docs/_sources/: index.rst.txt
docs/api/: pybottrader.html  search.js
docs/api/pybottrader/: datastreamers.html  indicators.html  portfolios.html  strategies.html  traders.html
docs/doctrees/: environment.pickle
docs/html/: .buildinfo  genindex.html  search.html
docs/pybottrader/: datastreamers.html  indicators.html  portfolios.html  scanners.html  strategies.html  traders.html  types.html  ui.html
docs/pybottrader/datastreamers/: base.html  coinbase.html  yfinance.html
docs/pybottrader/strategies/: base.html  crossover.html  simplersi.html
docs/pybottrader/ui/: candlestick.html  dataform.html  formfactory.html  line.html  strategyform.html
docs/source/: conf.py
docs_source/: .buildinfo  conf.py  indicators.rst
docs_source/.doctrees/: index.doctree  indicators.doctree
examples/: crossover.py  generator.py  gui.py  rsistrat.py  scanner.py
guide/: installation.md  ui-user-guide.md
pybottrader/: __init__.py  datastreamers.html  portfolios.html  portfolios.py  scanners.py  traders.html  traders.py  types.py
pybottrader/datastreamers/: __init__.py  base.py  coinbase.py  yfinance.py
pybottrader/indicators/: CMakeLists.txt  __init__.py
pybottrader/indicators/include/: indicators.hpp
pybottrader/indicators/src/: bindings.cpp
pybottrader/strategies/: __init__.py  base.py  crossover.py  simplersi.py
pybottrader/ui/: __init__.py  candlestick.py  dataform.py  formfactory.py  line.py  strategyform.py
src/pybottrader/: datastreamers.py  indicators.py  portfolios.py  strategies.py  traders.py
stubs/pybottrader/: __init__.pyi
stubs/pybottrader/indicators/: __init__.pyi  _indicators.pyi
test/: test_indicators.py  test_portfolios.py
tests/: test_coinbase.py  test_indicators.py  test_yfinance.py
tests/data/: BTC-USD-DAILY-2015-2023.csv
