[project]
name = "pybottrader"
version = "0.0.1"
dependencies = [
    "attrs",
    "pandas",
]

[tool.setuptools]
package-dir={"" = "src"}

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project.scripts]

[project.optional-dependencies]
dev = [
    "ipython",
    "jupyter",
    "jupyterlab",
    "mypy",
    "pandas-stubs",
    "pdoc",
    "pylint",
    "pytest",
    "black",
    "sphinx",
    "sphinx-rtd-theme",
    "sphinx-autodoc-typehints",
]
