[project]
name = "pybottrader"
version = "0.0.8"
readme = "README.md"
description = "An experimental Python library to implement trading bots"
license = {file = "LICENSE"}
keywords = ["trading", "bots", "finance"]
dependencies = [
    "attrs",
    "numpy",
    "pandas",
    "yfinance",
    "pybind11>=2.6.0",
]

[project.urls]
Documentation = "https://jailop.github.io/pybottrader/pybottrader.html"
Repository = "https://github.com/jailop/pybottrader"

[tool.setuptools]
package-dir={"" = "."}

[build-system]
requires = [
    "setuptools>=42",
    "cmake>=3.15",
    "pybind11>=2.6.0",
    "scikit-build-core>=0.5.0",
]
build-backend = "scikit_build_core.build"

[tool.scikit-build]
cmake.minimum-version = "3.15"
cmake.source-dir = "pybottrader/indicators"
cmake.build-type = "Release"
wheel.packages = ["pybottrader"]

[project.optional-dependencies]
dev = [
    "ipython",
    "jupyter",
    "jupyterlab",
    "mypy",
    "pandas-stubs",
    "pdoc",
    "pylint",
    "pytest",
    "black",
    "sphinx",
    "sphinx-rtd-theme",
    "sphinx-autodoc-typehints",
]
