[project]
name = "pybottrader"
version = "0.0.9"
readme = "README.md"
description = "An experimental Python library to implement trading bots"
license = {file = "LICENSE"}
keywords = ["trading", "bots", "finance"]
dependencies = [
    "attrs==25.4.0",
    "numpy==2.4.1",
    "pandas==3.0.0",
    "requests==2.32.5",
    "coinbase-advanced-py==1.8.2",
    "yfinance==1.1.0",
    "pybind11==3.0.1",
    "twine==6.2.0",
]

[project.urls]
Documentation = "https://jailop.github.io/pybottrader/pybottrader.html"
Repository = "https://github.com/jailop/pybottrader"

[tool.setuptools]
package-dir={"" = "."}

[build-system]
requires = [
    "setuptools",
    "cmake",
    "pybind11",
    "scikit-build-core",
    "build",
    "pybind11-stubgen",
]
build-backend = "scikit_build_core.build"

[tool.scikit-build]
cmake.minimum-version = "3.15"
cmake.source-dir = "pybottrader/indicators"
cmake.build-type = "Release"
wheel.packages = ["pybottrader"]

[project.optional-dependencies]
ui = [
    "PyQt6",
    "PyQt6-Charts",
]

dev = [
    "ipython",
    "jupyter",
    "jupyterlab",
    "mypy",
    "pandas-stubs",
    "pdoc",
    "pylint",
    "pytest",
    "black",
    "sphinx",
    "sphinx-rtd-theme",
    "sphinx-autodoc-typehints",
]
